--- a/IEC-ASM Paper/iec-asm.config.tex
+++ b/IEC-ASM Paper/iec-asm.config.tex
@@ -203,6 +203,6 @@ pdfencoding=auto,
 % ------------------------------------------------------------------------------
 
 % meta data --------------------------------------------------------------------
-\input{template.meta}
+\input{iec-asm.meta}
 \input{lib/resources/config/pdfmetadata}
 % ------------------------------------------------------------------------------
