--- a/IEC-ASM Paper/iec-asm.tex
+++ b/IEC-ASM Paper/iec-asm.tex
@@ -1,6 +1,6 @@
 % /* include config --------------------------------------------------------- */
-\input{template.config.tex}
-\input{template.acro.tex} % acro package
+\input{iec-asm.config.tex}
+\input{iec-asm.acro.tex} % acro package
 \IfFileExists{global-do-not-edit.acro.tex}{\input{global-do-not-edit.acro.tex}}{} % chktex 27
 \AtBeginDocument{\let\textlabel\label}
 
