--- a/IEC-ASM Paper/iec-asm.meta.tex
+++ b/IEC-ASM Paper/iec-asm.meta.tex
@@ -13,11 +13,11 @@
 % authors ----------------------------------------------------------------------
 \newcommand{\metaAuthorFirst}{Alexander Metzler}
 \newcommand{\metaMailFirst}{alexander.metzler@campus.tu-berlin,de}
-\newcommand{\metaInstFirst}{TU Berlin, Berlin, Germany,\\ Department of AV}
+\newcommand{\metaInstFirst}{TU Berlin, Berlin, Germany,\\ Department for Open Communication Systems}
 
 \newcommand{\metaAuthorXXX}{Farah Nasir}
 \newcommand{\metaMailXXX}{first.last@example.org}
-\newcommand{\metaInstXXX}{TU Berlin, Berlin, Germany,\\Department of AV}
+\newcommand{\metaInstXXX}{TU Berlin, Berlin, Germany,\\Department for Open Communication Systems}
 % ------------------------------------------------------------------------------
 
 % author PDF -------------------------------------------------------------------
