--- a/IEC-ASM Paper/iec-asm.tex
+++ b/IEC-ASM Paper/iec-asm.tex
@@ -48,7 +48,7 @@
     %\input{src/00_acknowledgements}
 
     %\bibliographystyle{IEEEtran} % enable for bibtex
-    %\bibliography{template} % enable for bibtex
+    %\bibliography{references} % enable for bibtex
     \printbibliography% enable for biber style
     % to show unreferenced publications ------------------------------------- */
     %\bibliographystyle{unsrt}
