--- a/IEC-ASM Paper/src/02_relatedwork.tex
+++ b/IEC-ASM Paper/src/02_relatedwork.tex
@@ -1,5 +1,7 @@
 \section{Related Work}\label{sec:relatedwork}
 
+Todo: Decide: Refer to other surveys that give an overview or to papers sighting works that implement edge technologies for smart manufacturing?
+
 \begin{itemize}
 \item Short outline of manufacturing as a whole (main goals) and the current trends.
 \item Outline existing concepts towards I. 4.0 (e.g using a centralized cloud) and state their limitations
