--- a/IEC-ASM Paper/src/01_introduction.tex
+++ b/IEC-ASM Paper/src/01_introduction.tex
@@ -21,3 +21,12 @@ Edge technologies introduce a way to tackle the above stated problems by improvi
 \end{figure}
 
 This paper surveys the current trends in industrial edge computing, which leads towards smart manufacturing. It identifies key technologies, introduces concepts to integrate these technologies into existing production facilities as well as provides an overview on the benefits as well as drawbacks of these systems. This paper is therefore organized as follows. Section II provides an outline of related work on this topic. Section III introduces key technologies used for industrial edge computing, Section IV outlines integration concepts of these approaches and in Section V a discussion on the current state of industrial edge computing is provided. Section VI concludes this paper.
+
+Cloud Computing and fog computing are rapidly replacing every section of the online or physical industry which involves processing data. Cloud computing charges only what you use so it is a pay as you store solution which is a massive achievement in the current era. One good aspect cloud computing provides is that you can replace the raw equipment cost directly into online scalable systems. On the other hand, a shortcome of Cloud Computing systems is observed where there is connectivity issues. Currently, this era belongs to online data stream processing with autonomous systems, and unreliability of network may be hazardous in such situations. Fog computing has given answers to many questions like how to store and transfer data to distributed systems without occupying the space and processing power at the server end in manufacturing support systems. Rather it has been transferred to the ‘edges', which means that all the space and time used to process data would be on the data producing edge node. 
+
+\section{Initiatives and Future Engineering}\label{sec:future_engineering}
+
+
+To help cope with the challenges that come, steps which are being taken are providing the opportunity to create new and innovative services to process data efficiently. Fog computing is helping resolve the issue of data flow and data diverse geo location by consuming the data at sites likes grid stations and devices. Collector at this step also processes data and provides commands to actuators also. Next is the reporting phase where machine shows visualizations to humans end machines. To perform all these steps fog computing systems have been observed to take seconds to minutes. Time scale increases if wider edge area is being considered but the impact on the cloud simultaneously decreases. Talking about manufacturing systems in this era, it is quite impressive to see growing role of integrated manufacturing information systems support manufacturing processes. In these systems integration has been done to reduce customer requirement mismatch. Modern trends have been introduced in the manufacturing support systems like internet of things, cloud computing for access to computing power, big data to analyze larger sets of structural and nonstructural data, automation in control systems. The concept of industry 4.0 in and smart manufacturing in Germany has led to revolution which other countries are also following. These are collectively called CPS which autonomously exchange information, trigger actions and control each other independently. Complete companies are now intelligence hubs covering the gap between digital and real world. Dynamic re-engineering processes are being introduced to respond flexibly to disruptions and failures. Two way horizontal integration is helping in cyber physical systems as well. CPPS are collected of autonomous components and modules which cooperate in a manner dependent on the situation in all stages of production. Starts from processes that are carried out by means of production devices and logistics network. CPPS systems open prospect for building applications in different areas. The implementation of CPPS systems is identified with industry revolution.
+
+Due to criticality of the systems, and increasing amount of data to terabytes, the processing of data is gaining importance, especially where decision has to be made faster. Hence closer the control decisions to the process being monitored better it is. The decision records within the company help the security of data as well. Data transferring delay has been reduced also. In this paper further it is explained how fog computing addresses the needs of modern manufacturing enterprises. There are 5 parameters known as 5C to compute i.e. which consist of Connection (sensor and networks), Cloud (data on demand), Content (correlation and meaning), Community (sharing and social), and Customization (personalization and value). This opens door for implementation of CAx (computer aided systems) engineering software in “as a service” model. However it requires a lot of computational power. Another perspective that fog computing opens is the possibility to implement geo-distributed applications. Fog computing infrastructure allows access to the cloud and its computing everywhere and at the edge of the network. This makes a great viewpoint for solutions related to technical infrastructure monitoring which is related with the data acquisition from groups of sensors deployed on major areas. Further horizon is to implement geo distributed applications. Fog computing architecture allows access to cloud from every edge node. This makes a great perspective for solutions related to technical infrastructure monitoring which is associated with the data acquisition from groups of sensors deployed on major areas. Therefore from manufacturing perspective fog computing due to wide range of applications, has a high prospect of development in the field of production of support systems.
