Draft 1.1: not formulated, decison, related work, conclusion missing

--- a/IEC-ASM Paper/references.bib
+++ b/IEC-ASM Paper/references.bib
@@ -99,3 +99,13 @@ doi = {10.1038/544023a}
   year={2016},
   publisher={IEEE}
 }
+
+@article{chen2017smart,
+  title={Smart factory of industry 4.0: Key technologies, application case, and challenges},
+  author={Chen, Baotong and Wan, Jiafu and Shu, Lei and Li, Peng and Mukherjee, Mithun and Yin, Boxing},
+  journal={IEEE Access},
+  volume={6},
+  pages={6505--6519},
+  year={2017},
+  publisher={IEEE}
+}
