--- a/IEC-ASM Paper/iec-asm.tex
+++ b/IEC-ASM Paper/iec-asm.tex
@@ -44,7 +44,8 @@
     \input{src/02_relatedwork}
     \input{src/03_approach}
     \input{src/04_evaluation}
-    \input{src/05_conclusions}
+    \input{src/05_discussion}
+    \input{src/06_conclusions}
     %\input{src/00_acknowledgements}
 
     %\bibliographystyle{IEEEtran} % enable for bibtex
