--- a/IEC-ASM Paper/src/00_abstract.tex
+++ b/IEC-ASM Paper/src/00_abstract.tex
@@ -1,5 +1,5 @@
-Current advances in the manufacturing domain lean heavily towards the Industry 4.0 concept as it introduces smart, flexible and predictive manufacturing, thus resulting in more efficient production processes and new business opportunities. The main objective of I. 4.0 lies in interconnecting the entire shop floor, allowing to gather and exchange  data between devices and applying reasoning on this data to improve production processes. However the I. 4.0 concept suffers from a number of drawbacks which greatly limit the use case scenarios, given that most functionalities are currently being realized with a centralized cloud approach. Some of the key problems are the importance of latency in the manufacturing domain, as some processes on the shop floor require real time decision making and therefore real time communication, the energy consumption of the used devices on the shop floor, as they have mostly limited resources, as well as the amount of devices that gather data, as this leads to a bottleneck on the back end of the network, thus making a centralized cloud approach either inefficient or impossible.
+Current advances in the manufacturing domain lean heavily towards the Industry 4.0 concept as it introduces smart, flexible and predictive manufacturing, thus resulting in more efficient production processes and new business opportunities. The main objective of I. 4.0 lies in interconnecting the entire shop floor, allowing the gathering and exchanging of data between devices and applying reasoning based on this data to improve production processes. However the I. 4.0 concept suffers from a number of drawbacks which greatly limit the use case scenarios, given that most business functionalities are currently being implemented using centralized clouds. Some of the key problems for the manufacturing domain are latency, as some processes on the shop floor require real time decision making and therefore real time communication, the energy consumption of the devices at the shop floor, as they have mostly limited resources, as well as the amount of devices that gather data, as this leads to a bottleneck on the back end of the network, thus making a centralized cloud approach either inefficient or impossible.
 
-A promising approach to tackle these problems is based on the usage of edge technologies to reduce the back end traffic by enabling a local processing step where the gathered data can be analysed locally and therefore e.g. the latency of the system can be greatly reduced. This paper surveys current trends in industrial edge computing by identifying key technologies and current advances in the integration of edge technologies in Smart Manufacturing as well as providing an overview of the benefits and drawbacks of these solutions.
+A promising approach to tackle these problems is based on the usage of edge technologies to reduce the back end traffic by enabling a local processing step where the gathered data can be analysed locally and therefore e.g. latency concerns can be greatly reduced. This paper surveys current trends in industrial edge computing by identifying key technologies for the I.4.0 use cases, outlining current advances in the integration of edge technologies in Smart Manufacturing as well as providing an overview of the benefits and drawbacks of these solutions.
 
-It is shown that the integration of edge technologies can greatly improve the efficiency of current production processes by reducing the latency, improving the energy consumption of the devices on the shop floor and allowing a more efficient analysis of the data, resulting in a more robust implementation of the I. 4.0 vision.
+It is shown that the integration of edge technologies can greatly improve the efficiency of current production processes by reducing the latency, improving the energy consumption of the devices on the shop floor and allowing a more efficient analysis of the data, resulting in a more robust implementation of the I. 4.0 vision. However it is also shown, that to maximize the true potential of edge computing in the manufacturing domain, existing plants have to be radically transformed to meat the requierements for an efficient system.
